<resources>
    <string name="app_name">E-thana</string>
    <string name="title_home">Accueil</string>
    <string name="title_search">Rechercher</string>
    <string name="title_favoris">Raccourcis</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_map">MapActivity</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_account">Compte</string>
    <string name="title_cimetieres">Cimetières</string>
    <string name="title_sepulture">Itinéraire</string>
</resources>