<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.sitcom.software.e_thanas.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_search"
        android:name="com.sitcom.software.e_thanas.ui.Search.SearchFragment"
        android:label="@string/title_search"
        tools:layout="@layout/fragment_search" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.sitcom.software.e_thanas.ui.favoris.FavorisFragment"
        android:label="@string/title_favoris"
        tools:layout="@layout/fragment_favoris" />

    <fragment
        android:id="@+id/navigation_account"
        android:name="com.sitcom.software.e_thanas.ui.account.AccountFragment"
        android:label="@string/title_account"
        tools:layout="@layout/fragment_account" />

    <fragment
        android:id="@+id/navigation_cimetieres"
        android:name="com.sitcom.software.e_thanas.ui.cimetieres.CimetieresFragment"
        android:label="@string/title_cimetieres"
        tools:layout="@layout/fragment_cimetieres" />
</navigation>